# artifacts/api-server/src/routes/auth.ts
@@ -95,6 +95,7 @@ router.post("/register", rateLimit(10, 15 * 60 * 1000), async (req, res) => {
       activePlanId: user.activePlanId,
       planActivatedAt: user.planActivatedAt?.toISOString() ?? null,
       subscriptionActive: user.subscriptionActive,
+      isSubscriptionSelected: user.isSubscriptionSelected,
       referralCode: user.referralCode,
       createdAt: user.createdAt.toISOString(),
     },
@@ -164,6 +165,7 @@ router.post("/login", rateLimit(10, 15 * 60 * 1000), async (req, res) => {
       activePlanId: user.activePlanId,
       planActivatedAt: user.planActivatedAt?.toISOString() ?? null,
       subscriptionActive: user.subscriptionActive,
+      isSubscriptionSelected: user.isSubscriptionSelected,
       referralCode: user.referralCode,
       createdAt: user.createdAt.toISOString(),
     },
@@ -200,6 +202,7 @@ router.get("/me", async (req, res) => {
     activePlanId: user.activePlanId,
     planActivatedAt: user.planActivatedAt?.toISOString() ?? null,
     subscriptionActive: user.subscriptionActive,
+      isSubscriptionSelected: user.isSubscriptionSelected,
     referralCode: user.referralCode,
     createdAt: user.createdAt.toISOString(),
   });
